--- a/website/package.json
+++ b/website/package.json
@@ -26,6 +26,7 @@
     "@astrojs/sitemap": "^3.2.0",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
+    "@catppuccin/palette": "^1.7.1",
     "@fontsource-variable/inter": "^5.1.0",
     "astro": "^4.16.2",
     "astro-embed": "^0.7.4",
