--- a/website/social/governance/governance.yml
+++ b/website/social/governance/governance.yml
@@ -5,7 +5,7 @@ leadership:
     description: "Owners of the GitHub organisation."
     responsibilities: "Responsible for organisation wide matters. Such as setting the direction of the organisation, approving new ports, adding new maintainers, and cultivating a healthy community."
     current-members:
-      - name: Finding Nemo Jr.
+      - name: MTNS
         year: Fall 2023
         job: Crew (Lights)
         url: https://github.com/pocco81
